{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 16,
  "lineage": "672847d4-0146-d688-6733-7fbccd7f8c07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "LOS-LYONS-DE-IPSSI-1-nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078f35be39ff51fea",
            "domain": "vpc",
            "id": "eipalloc-078f35be39ff51fea",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-237-7-106.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.7.106",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LOS-LYONS-DE-IPSSI-1-MACHINE-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-021d41cbdefc0c994",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-048027aa6b1b77fd9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048027aa6b1b77fd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vittorio_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02477093fac521f7b",
            "private_dns": "ip-10-3-1-211.eu-west-3.compute.internal",
            "private_ip": "10.3.1.211",
            "public_ip": "13.37.221.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc4480cba69be9aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d73e0ca0fe19f8f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bdc41f58f4cfacfd",
            "tags": {
              "Name": "MACHINE-ADMIN"
            },
            "tags_all": {
              "Name": "MACHINE-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d73e0ca0fe19f8f2"
            ]
          },
          "dependencies": [
            "aws_security_group.LOS-LYONS-DE-IPSSI-1-SG-ADMIN",
            "aws_subnet.LOS-LYONS-DE-IPSSI-1-SUBNET-PUBLIC",
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LOS-LYONS-DE-IPSSI-1-MACHINE-RPROXY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-021d41cbdefc0c994",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0028cedf0817159a7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0028cedf0817159a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vittorio_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e71a9bf526b923c",
            "private_dns": "ip-10-3-1-120.eu-west-3.compute.internal",
            "private_ip": "10.3.1.120",
            "public_ip": "35.180.26.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ee1c3fea84cab55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0df0c9fd714f835ab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bdc41f58f4cfacfd",
            "tags": {
              "Name": "MACHINE-RPROXY"
            },
            "tags_all": {
              "Name": "MACHINE-RPROXY"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df0c9fd714f835ab"
            ]
          },
          "dependencies": [
            "aws_security_group.LOS-LYONS-DE-IPSSI-1-SG-ADMIN",
            "aws_security_group.LOS-LYONS-DE-IPSSI-1-SG-RPROXY",
            "aws_subnet.LOS-LYONS-DE-IPSSI-1-SUBNET-PUBLIC",
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LOS-LYONS-DE-IPSSI-1-MACHINE-WEB1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-021d41cbdefc0c994",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0a3b5ff1749e76aaa",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3b5ff1749e76aaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vittorio_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e7859c073e87bb97",
            "private_dns": "ip-10-3-2-187.eu-west-3.compute.internal",
            "private_ip": "10.3.2.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017af5d4054208a0f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-064a6819755975332"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02acf73543b837d82",
            "tags": {
              "Name": "MACHINE-WEB1"
            },
            "tags_all": {
              "Name": "MACHINE-WEB1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064a6819755975332"
            ]
          },
          "dependencies": [
            "aws_security_group.LOS-LYONS-DE-IPSSI-1-SG-ADMIN",
            "aws_security_group.LOS-LYONS-DE-IPSSI-1-SG-RPROXY",
            "aws_security_group.LOS-LYONS-DE-IPSSI-1-SG-WEB",
            "aws_subnet.LOS-LYONS-DE-IPSSI-1-SUBNET-PRIVATE",
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "LOS-LYONS-DE-IPSSI-1-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-0cba576d2ff966c10",
            "id": "igw-0cba576d2ff966c10",
            "owner_id": "962615889483",
            "tags": {
              "Name": "LOS-LYONS-DE-IPSSI-1-igw"
            },
            "tags_all": {
              "Name": "LOS-LYONS-DE-IPSSI-1-igw"
            },
            "vpc_id": "vpc-0971ace8b1183bc82"
          },
          "dependencies": [
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "LOS-LYONS-DE-IPSSI-1-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078f35be39ff51fea",
            "connectivity_type": "public",
            "id": "nat-00d39d6d2bcd011bd",
            "network_interface_id": "eni-0e4b66478e7cb1408",
            "private_ip": "10.3.1.187",
            "public_ip": "15.237.7.106",
            "subnet_id": "subnet-0bdc41f58f4cfacfd",
            "tags": {
              "Name": "LOS-LYONS-DE-IPSSI-1-natgw"
            },
            "tags_all": {
              "Name": "LOS-LYONS-DE-IPSSI-1-natgw"
            }
          },
          "dependencies": [
            "aws_eip.LOS-LYONS-DE-IPSSI-1-nateip",
            "aws_subnet.LOS-LYONS-DE-IPSSI-1-SUBNET-PUBLIC",
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "LOS-LYONS-DE-IPSSI-1-defroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cba576d2ff966c10",
            "id": "r-rtb-0207c824e5792ce331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0207c824e5792ce33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.LOS-LYONS-DE-IPSSI-1-igw",
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "LOS-LYONS-DE-IPSSI-1-privrtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0fd6095ba3f21048c",
            "id": "rtb-0fd6095ba3f21048c",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d39d6d2bcd011bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0971ace8b1183bc82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.LOS-LYONS-DE-IPSSI-1-nateip",
            "aws_nat_gateway.LOS-LYONS-DE-IPSSI-1-natgw",
            "aws_subnet.LOS-LYONS-DE-IPSSI-1-SUBNET-PUBLIC",
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LOS-LYONS-DE-IPSSI-1-privrtb-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cbdab53cb28371b",
            "route_table_id": "rtb-0fd6095ba3f21048c",
            "subnet_id": "subnet-02acf73543b837d82"
          },
          "dependencies": [
            "aws_eip.LOS-LYONS-DE-IPSSI-1-nateip",
            "aws_nat_gateway.LOS-LYONS-DE-IPSSI-1-natgw",
            "aws_route_table.LOS-LYONS-DE-IPSSI-1-privrtb",
            "aws_subnet.LOS-LYONS-DE-IPSSI-1-SUBNET-PRIVATE",
            "aws_subnet.LOS-LYONS-DE-IPSSI-1-SUBNET-PUBLIC",
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LOS-LYONS-DE-IPSSI-1-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0d73e0ca0fe19f8f2",
            "description": "LOS-LYONS-DE-IPSSI-1-SG-ADMIN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow out traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d73e0ca0fe19f8f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Auto generated rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "LOS-LYONS-DE-IPSSI-1-SG-ADMIN",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0971ace8b1183bc82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LOS-LYONS-DE-IPSSI-1-SG-RPROXY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0df0c9fd714f835ab",
            "description": "LOS-LYONS-DE-IPSSI-1-SG-RPROXY",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow out traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df0c9fd714f835ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Auto generated rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Auto generated rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Auto generated rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d73e0ca0fe19f8f2"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "LOS-LYONS-DE-IPSSI-1-SG-RPROXY",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0971ace8b1183bc82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LOS-LYONS-DE-IPSSI-1-SG-ADMIN",
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LOS-LYONS-DE-IPSSI-1-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-064a6819755975332",
            "description": "LOS-LYONS-DE-IPSSI-1-SG-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow out traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064a6819755975332",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Auto generated rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d73e0ca0fe19f8f2"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Auto generated rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df0c9fd714f835ab"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LOS-LYONS-DE-IPSSI-1-SG-WEB",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0971ace8b1183bc82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LOS-LYONS-DE-IPSSI-1-SG-ADMIN",
            "aws_security_group.LOS-LYONS-DE-IPSSI-1-SG-RPROXY",
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LOS-LYONS-DE-IPSSI-1-SUBNET-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-02acf73543b837d82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02acf73543b837d82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LOS-LYONS-DE-IPSSI-1-SUBNET-PRIVATE"
            },
            "tags_all": {
              "Name": "LOS-LYONS-DE-IPSSI-1-SUBNET-PRIVATE"
            },
            "vpc_id": "vpc-0971ace8b1183bc82"
          },
          "dependencies": [
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LOS-LYONS-DE-IPSSI-1-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0bdc41f58f4cfacfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdc41f58f4cfacfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LOS-LYONS-DE-IPSSI-1-pub"
            },
            "tags_all": {
              "Name": "LOS-LYONS-DE-IPSSI-1-pub"
            },
            "vpc_id": "vpc-0971ace8b1183bc82"
          },
          "dependencies": [
            "aws_vpc.LOS-LYONS-DE-IPSSI-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "LOS-LYONS-DE-IPSSI-1-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-0971ace8b1183bc82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0d28c3fdb36257525",
            "default_route_table_id": "rtb-0207c824e5792ce33",
            "default_security_group_id": "sg-00bf533397e2fc14c",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0971ace8b1183bc82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0207c824e5792ce33",
            "owner_id": "962615889483",
            "tags": {
              "Name": "LOS-LYONS-DE-IPSSI-1-VPC"
            },
            "tags_all": {
              "Name": "LOS-LYONS-DE-IPSSI-1-VPC"
            }
          }
        }
      ]
    }
  ]
}